--- a/src/layouts/AppShell.astro
+++ b/src/layouts/AppShell.astro
@@ -1,5 +1,32 @@
-<div>
-  <header>This is my header</header>
-  <section>Here is my content that goes in the middle</section>
-  <footer>This is my footer</footer>
+---
+import IconSheild from "../components/IconSheild.astro";
+---
+
+<div class="flex flex-col font-[var(--font-sans)] text-[var(--primary)]">
+  <div class="max-w-[1400px] mx-auto w-full">
+    <header class="p-2 flex flex-row gap-3 items-center justify-between">
+      <!-- BRAND -->
+      <div class="flex gap-3 items-ce">
+        <IconSheild />
+        <h1 class="font-bold">Art Guard</h1>
+      </div>
+
+      <!-- Links -->
+      <div class="text-[var(--foreground)] flex gap-8 font-bold">
+        <a href="/features">Features</a>
+        <a href="/howitworks">How It Works</a>
+        <a href="/roadmap">Roadmap</a>
+        <a href="/faq">FAQ</a>
+      </div>
+
+      <!-- Buttons -->
+      <div>
+        <button
+          class="bg-[var(--primary)] rounded-[var(--radius)] text-background p-1"
+          >Try It Now</button
+        >
+      </div>
+    </header>
+    <footer></footer>
+  </div>
 </div>
