--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,65 @@
 ---
-import IconSheild from "../components/IconSheild.astro";
+import HeroSection from "../components/HeroSection.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout />
+<Layout>
+  <HeroSection />
+  <section>
+    <h2>Step 1: Sign up and Upload Your Work</h2>
+    <p>
+      Art Guard allows you to create professional portfolios that you can use to
+      demonstrate your skills to prospective clients.
+    </p>
+    <p>
+      Once you sign up you can upload a curated selection of your work to best
+      show off your abilies. We help and guide you through this process making
+      it easier than ever to create a clear porfolio that clearly demonstrates
+      who you are and what you can do.
+    </p>
+  </section>
+  <section>
+    <h2>Step 2: Build a Comission Flow</h2>
+    <p>
+      Using Art Guard's tools you create a comission flow that manages every
+      step of your transactions. Gone are the difficult client interactions.
+      Now, you have a clear and simple process that is transparent to all
+      involved.
+    </p>
+    <p>
+      Set a robust process that shows clients just what they need to provide.
+      Examples of comission workflow, types of references needed, and clear
+      examples of what a client will receive at each step of the process.
+    </p>
+    <ul>
+      <li>Pre-Commission Checklist</li>
+      <li>Examples for each stage</li>
+      <li>Professional contracts with specifics on each step of the process</li>
+      <li>Timeline management</li>
+      <li>Payment services</li>
+    </ul>
+  </section>
+  <section>
+    <h2>Step 3: Protect your rights</h2>
+    <p>
+      Register your original work on Art Guard Protect, in our central copyright
+      database.
+    </p>
+    <p>
+      We pro-actively defend your copyright, including carrying out ongoing
+      takedowns from AI datasets.
+    </p>
+    <p>
+      Protect against AI scraping with our multi-modal defence solutions. We use
+      a range of cutting edge techniques to protect your work. From legal
+      actions to have your work removed from AI companies data sets, to
+      technical soltuions to stop it from being scraped in the first place.
+    </p>
+    <p>
+      Poison Fruits: In addition to protecting your specific art work, we also
+      operate poison solutions, providing AI scrapers with bad data, that is
+      hard for the AI company to detect on a case by case basis, but that will
+      cause detrimental results to any model trained on it.
+    </p>
+  </section>
+</Layout>
